--- a/frontend/src/CSS/Modal.css
+++ b/frontend/src/CSS/Modal.css
@@ -1,4 +1,5 @@
 /* Modal.css */
+
 .modal-backdrop {
   position: fixed;
   top: 0;
@@ -22,13 +23,14 @@
 }
 
 .close-button {
-  top: 0rem;
-  left: 19.4rem;
+  top: 10px; /* Adjust this value to your preference */
+  left: 10px; /* Adjust this value to position the close button on the left */
   background-color: transparent;
   border: none;
   font-size: 50px;
   cursor: pointer;
-  position: fixed;
+  position: absolute; /* Change to absolute */
+  z-index: 1; /* Ensure it's above other content */
 }
 
 .modal-images-container {
@@ -41,4 +43,22 @@
   max-width: 100%;
   max-height: 100%;
   border-radius: 8px;
+}
+
+/* Responsive styles */
+@media (max-width: 768px) {
+  .modal-content {
+    width: 90%;
+  }
+  
+  .close-button {
+    left: 5px; /* Adjust this value to your preference */
+  }
+}
+
+@media (max-width: 576px) {
+  .modal-content {
+    width: 95%;
+    padding: 10px;
+  }
 }
